fix(swagger): swagger routing issue
